--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
+
+
     <!--使用JSTL在web.xml 文件中添加以下配置-->
 
 
+    <!--&lt;!&ndash; JDBC DataSources (java:comp/env/jdbc/javaDatabase) &ndash;&gt;
+    <resource-ref>
+        <description>The default DS</description>
+        &lt;!&ndash;该名称必须与下面的描述文件中的一致&ndash;&gt;
+        <res-ref-name>jdbc/javaDatabase</res-ref-name>
+        &lt;!&ndash;看看你的配置&ndash;&gt;
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>-->
 
 
 </web-app>
